<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <ImageView
            android:id="@+id/adapter_article_list_icon"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/article_list_icon_content_description"
            android:layout_centerVertical="true"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

    <TextView
            android:id="@+id/adapter_article_list_title"
            android:layout_toRightOf="@+id/adapter_article_list_icon"
            android:layout_toEndOf="@+id/adapter_article_list_icon"
            android:text="@string/title_not_available"
            android:maxLines="1"
            android:textStyle="bold"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <TextView
            android:id="@+id/adapter_article_list_description"
            android:layout_alignLeft="@id/adapter_article_list_title"
            android:layout_alignStart="@id/adapter_article_list_title"
            android:layout_marginTop="8dp"
            android:maxLines="3"
            android:ellipsize="end"
            android:text="@string/description_not_available"
            android:layout_below="@id/adapter_article_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</RelativeLayout>